<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tortillas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/FinicioTortilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <TextView
            android:text="@string/tamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:layout_below="@+id/radioGroup"
            android:layout_toEndOf="@+id/radioGroup2"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:text="@string/individual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/familiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/tipoh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:text="@string/granja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5" />

        <RadioButton
            android:text="@string/campero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4" />

        <RadioButton
            android:text="@string/ecologico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_weight="0.35" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="@string/cant"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAlignment="gravity"
        android:gravity="right" />

    <TextView
        android:text="@string/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button4"
            android:textColor="@android:color/holo_red_dark"
            android:layout_weight="0.36"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:text="@string/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:id="@+id/button5"
            android:textColor="@android:color/holo_blue_light"
            android:layout_weight="0.36"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    </LinearLayout>

</LinearLayout>