<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical"
    android:weightSum="1"
    tools:context="example.com.cebanc_tortillas.MainActivity">

    <TextView
        android:text="@string/FInicioDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/direccion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText3"
        android:hint="@string/telefono"
        android:maxLength="9" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/cebanc_620x465"
        android:id="@+id/imageView"
        android:layout_weight="1.00" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/button2"
            android:textColor="@android:color/holo_red_dark"
            android:layout_weight="0.36"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:text="@string/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:id="@+id/button3"
            android:textColor="@android:color/holo_blue_light"
            android:layout_weight="0.36"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>

</LinearLayout>